Remove task search component and fix dropdown z-index issue
- Remove unused TaskSearchComponent from job view
- Delete task_search.scss file as component was removed
- Comment out z-index: auto to fix dropdown layering issues

--- a/app/assets/stylesheets/components/dropdown.scss
+++ b/app/assets/stylesheets/components/dropdown.scss
@@ -69,7 +69,7 @@
 .dropdown-container {
   position: relative;
   overflow: visible !important;
-  z-index: auto !important; // Don't create new stacking context
+  //z-index: auto !important; // Don't create new stacking context
 }
 
 /* Override any parent overflow hidden when dropdown is open */
